<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserInfoActivity">


    <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#000000"
              android:id="@+id/text_saudacao"
              android:textSize="20sp"
              android:gravity="center"
              android:layout_marginTop="20dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:gravity="center"
                android:id="@+id/text_info_altura"
                android:textSize="20sp"/>

        <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:id="@+id/text_info_peso"
                android:gravity="center"
                android:textSize="20sp"/>

    </LinearLayout>

    <View   android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            android:focusable="false" />
    <TextView
            android:gravity="center"
            android:text="@string/taxa_metab_lica_basal"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <TextView
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_tbm"/>

    <View   android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            android:focusable="false" />

    <TextView
            android:gravity="center"
            android:text="@string/selecione_o_seu_estilo_de_vida"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_selecione"/>

    <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botoes_radio_group"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

        <RadioButton android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="btnSelecionado"
                     android:id="@+id/sedentario"
                     android:text="@string/sedent_rio"/>

        <RadioButton android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="btnSelecionado"
                     android:id="@+id/levemente_ativo"
                     android:text="@string/levemente_ativo"/>

        <RadioButton android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/moderadamente_ativo"
                     android:onClick="btnSelecionado"
                     android:text="@string/moderadamente_ativo"/>

        <RadioButton android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/muito_ativo"
                     android:onClick="btnSelecionado"
                     android:text="@string/muito_ativo"/>

    </RadioGroup>


    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_detalhes"
            android:onClick="detalhes"
            android:text="@string/detalhes"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
    />


</LinearLayout>